--- a/tex/thesis.tex
+++ b/tex/thesis.tex
@@ -6,9 +6,10 @@
 \usepackage{amsmath}
 \usepackage{tikz}
 \usepackage{amsthm}
-\usetikzlibrary{matrix}
 \usepackage{amssymb}
 \usepackage{xfrac}
+\usepackage[hidelinks]{hyperref}
+\usetikzlibrary{matrix,calc,3d}
 
 \title{Proton Dynamics in Cavities}
 \author{Dominik Wille}
@@ -21,10 +22,20 @@
 	\textbf{#1}%
 }
 
-\newcommand{\myImage}[3]{
+\newcommand{\myImage}[2]{
+	\begin{figure}[ht!]
+	\centering
 	\includegraphics[width = 0.8\textwidth]{img/#1}
-	{\centering Figure 1: #2}
+	\caption{#2}
+	\label{pic:#1}
+	\end{figure}
 }
+
+\newcommand{\myFigRef}[1]{\textit{\hyperref[#1]{Figure \ref*{#1}}}}
+
+\newcommand{\myEqRef}[1]{\textit{\hyperref[eq:#1]{Equation \ref*{eq:#1}}}}
+
+\newcommand{\myEqLabel}[1]{\label{eq:#1}}
 
 \begin{document}
 \maketitle
@@ -146,20 +157,128 @@ For other values $x$ the probability is $0$. This means that there is only one v
 \begin{align}
 \rho(x,n) = \frac{1}{2\varepsilon}\; p(x,n) = \frac{1}{\varepsilon\sqrt{2\pi n}} \exp\left(\frac{-x^2}{2\varepsilon^2 n} \right)
 \end{align}
+Which is the normal distribution with $\mu = 0;\;\; \sigma =  \varepsilon\sqrt{n}$.
+
 The probability density function of a \effect{random walk} fulfills the diffusion equation (\textit{Note: }$n = \sfrac{t}{\delta t}$):
 \begin{align}
 \frac{\partial}{\partial t} \rho(x,t) &= D \frac{\partial^2}{\partial x^2 } \rho(x,t) \\
-\mathrm{with} \, \, \,\, D &= \frac{\varepsilon^2}{2 \delta t}
+\mathrm{with} \, \, \,\, D &= \frac{\varepsilon^2}{2 \delta t} \myEqLabel{def:D}
 \end{align}
 What means that a random walk can also be seen as a diffusion process.
 \subsection{Mean square distance}
-Obviously the expectation value after $n$ steps $\langle x_n\rangle = 0$. What can be derived from:
+Obviously the expectation value for $x$ after $n$ steps $\langle x_n\rangle = 0$. What can be derived from:
 \begin{align}
 \langle x_n\rangle = \int_{-\infty}^\infty x \cdot \rho(x,t)\; dx = 0
 \end{align}
-But the \effect{mean square distance} (MSD) is:
+But the \effect{Mean Square Distance} $\langle x_n^2\rangle$ (MSD) fulfills the following expression:
 \begin{align}
-\langle x_n^2\rangle = \int_{-\infty}^\infty x^2 \cdot \rho(x,t)\; dx = 2 D t
+\langle x_n^2\rangle = \int_{-\infty}^\infty x^2 \cdot \rho(x,t)\; dx = 2 D t \myEqLabel{MSD}
+\end{align}
+
+\section{Implementation of the langevin simulation}
+
+\begin{figure}[ht!]
+\centering
+\begin{tikzpicture}[scale=.8, z={(-.707,-.3)}]
+    \draw (6,0,0) -- (0,0,0);
+    \draw (6,0,0) -- (6,0,-3);
+    \draw (6,3,-3) -- (6,3,0);
+    \draw (6,3,0) -- (0,3,0);
+    \draw (0,3,-3) -- (6,3,-3);
+    \draw (0,0,-3) -- (6,0,-3);
+    \draw (0,0,0) -- (0,0,-3); 
+    \draw (0,3,0) -- (0,3,-3);
+    \draw (3,0,-1.5) node{B};
+    \draw (3,3,-1.5) node{A};
+    \draw[arrows=<->] (0,0.2,0) -- (0,2.8,0);
+    \draw (-0.3,1.5,0) node{$d$};
+\end{tikzpicture}
+\end{figure}
+
+\myImage{position}{Position of an ion}
+
+\section{Comparision to the analytical Calculation}
+\subsection{Free particle}
+A very simple test is to check if the simulation of a particle without any barriers has a linear growing MSD in time steps. \myFigRef{pic:mean_square} shows the average squared distance $x_n^2$ for different numbers of runs compared to the analytic expression. The parameters were:
+\begin{center}
+\begin{tabular}{c|c}
+Parameter & Value \\\hline
+$D$ & 0.1 \\
+$\delta t$ & 20 \\
+$x(n=0)$ & 0 \\
+$n_{\mathrm{max}}$ & 400
+\end{tabular}
+\end{center}
+Note that $\varepsilon$ is determined by \myEqRef{def:D}.
+
+The expectation is that for large numbers of runs the mean square converges against the following analytic expression derived from \myEqRef{MSD}:
+\begin{align}
+\langle x_n^2\rangle (t) &= 2 D t \\
+\Rightarrow\langle x_n^2\rangle (n) &= 2 D \delta t \cdot n
+\end{align}
+\myImage{mean_square}{MSD over time for different numbers of runs}
+
+\subsection{Correlation functions}
+Since there is an analytic expression for the Correlation functions $C_{AA}(t)$ and $C_{AB}(t)$ which represent the probability for an ion to be absorbed at time $t$ on plate $\mathrm{A}/\mathrm{B}$ given that it is absorbed on plate $\mathrm{A}$ at time $t=0$.
+
+These correlation functions can easily be obtained from the langevin simulation by noting if and where the particle is absorbed over the time. 
+
+Afterwards the values of the correlation function $C_{AA}(t)$ can be calculated as the number of time intervals with length $t$ where the ion is absorbed on plate $\mathrm{A}$ at the beginning and at the end over the total number of intervals.
+
+Similarly the values of the correlation function $C_{AB}(t)$ can be calculated as the number of time intervals with length $t$ where the ion is absorbed on plate $\mathrm{A}$ at the beginning and on plate $\mathrm{B}$ at the end over the total number of intervals.
+
+The test was performed with the following parameters:
+
+\begin{center}
+\begin{tabular}{c|c}
+Parameter & Value \\\hline
+$D$ & 0.2 \\
+$\delta t$ & 0.1 \\
+$\tau$ & 1 \\
+$p$ & 0.3 \\
+$s$ & 2.0
+\end{tabular}
+\end{center}
+
+where $D$ the diffusion constant, $\delta t$ the step size, $\tau$ the exponential decay constant for the desorbtion probability, $p$ the probability that a particle at the boundary absorbs and $s$ is the plate distance.
+
+In order to compare these correlation functions with its analytic equivalents they need to be Laplace transformed. To obtain easy expressions for the Laplace transformed functions they are fitted with the following functions:
+
+\begin{align}
+C_{AA}(n) &= a \cdot e^{- n \cdot b} + c \cdot e^{- n \cdot d} + f \cdot e^{-n \cdot g} + h\\
+C_{AB}(n) &= j \cdot e^{- n \cdot k} + l
+\end{align}
+
+\myImage{caa_cab}{Correlation Functions and its fits}
+
+The parameters were determined as:
+\begin{center}
+\begin{tabular}{c|c}
+Parameter & Value \\\hline
+$a$ & 0.07712867\\
+$b$ & 0.00204063\\
+$c$ & 0.55760507\\
+$d$ & 0.10309138\\
+$f$ & 0.30010113\\
+$g$ & 0.01889753\\
+$h$ & 0.02938739\\
+$j$ & -3.83406062e-02\\
+$k$ & 1.078311976e-03\\
+$l$ & 3.11126910e-02
+\end{tabular}
+\end{center}
+
+Since for a simple exponential expression the Laplace transformed expression is given by:
+\begin{align}
+F(x) &= A \cdot e^{B\cdot x} \\
+\widetilde{F}(\omega) &= \int_0^\infty A \cdot e^{B\cdot x} \cdot e^{-\omega\cdot x}\, dx \\
+&= \frac{A}{B + \omega}
+\end{align}
+
+The Laplace transformed correlation functions are:
+\begin{align}
+\widetilde{C}_{AA}(\omega) &= \frac{a}{b + \omega} + \frac{c}{d + \omega} + \frac{f}{g + \omega} + \frac{h}{\omega} \\
+\widetilde{C}_{AB}(\omega) &= \frac{j}{k + \omega} + \frac{l}{\omega}
 \end{align}
 
 \end{document}
