--- a/tex/thesis.tex
+++ b/tex/thesis.tex
@@ -31,6 +31,8 @@
 	\end{figure}
 }
 
+\newcommand{\diff}{\mathop{}\!\mathrm{d}}
+
 \newcommand{\myFigRef}[1]{\textit{\hyperref[#1]{Figure \ref*{#1}}}}
 
 \newcommand{\myEqRef}[1]{\textit{\hyperref[eq:#1]{Equation \ref*{eq:#1}}}}
@@ -159,7 +161,7 @@ p(x,n) = \binom{n}{k} \cdot 2^{-n}
 A consequence of the \effect{de Moivre–Laplace theorem} is that for large numbers of steps $(n\rightarrow\infty)$ this expression can be approximated with the following gaussian curve:
 
 \begin{align}
-p(x,n) \cong \sqrt{\frac{2}{n \pi}} e^{-\sfrac{x^2}{2\varepsilon^2 n}}
+p(x,n) \cong \sqrt{\frac{2}{n \pi}} e^{-\sfrac{x^2}{2\varepsilon^2 n}} \myEqAnnex{moivre_laplace_theorem}
 \end{align}
 
 The probability function $p(x,n)$ has valid values only for values 
@@ -177,32 +179,33 @@ The probability density function for a gaussian random walk with mean step size 
 \begin{align}
 \rho(x,n) = \frac{1}{\varepsilon\sqrt{2\pi n}} e^{-\sfrac{x^2}{2\varepsilon^2 n}} \myEqLabel{rho_gauss}
 \end{align}
-This can easily be shown with a mathematical induction for $p(x,n)$. Note that because every position is possible the probability $p(x,n)$ is exactly the same as the probability density $\rho(x,n)$ in this case:
+This can easily be shown with a mathematical induction for $p(x,n)$. Note that because every position is possible the probability 
 \begin{align}
-\rho(x,n) = p(x,n)
-\end{align} 
+p(x,n) = 0 
+\end{align}
+because this means that the number of possible positions is infinite.
 
 \textbf{Base case} ($n = 1$)\textbf{:}
 \begin{align}
-p(x,1) = \frac{1}{\varepsilon\sqrt{2\pi}} e^{-\sfrac{x^2}{2\varepsilon^2}}
+\rho(x,1) = \frac{1}{\varepsilon\sqrt{2\pi}} e^{-\sfrac{x^2}{2\varepsilon^2}}
 \end{align}
 Which is exactly the expression of a gaussian distributed 1--dimensional random vector with $\varepsilon$ variance. $\checkmark$
 
-\textbf{Inductive step:}
+\textbf{Inductive step} ($n + 1$)\textbf{:}
 \begin{align}
-p(x,n+1) &= \int_{-\infty}^\infty \frac{1}{\varepsilon\sqrt{2n\pi}}\, e^{-\sfrac{x'^2}{2n\varepsilon^2}} \cdot \frac{1}{\varepsilon\sqrt{2\pi}}\, e^{-\sfrac{(x - x')^2}{2\varepsilon^2}} \, dx'\\
+\rho(x,n+1) &= \int_{-\infty}^\infty \frac{1}{\varepsilon\sqrt{2n\pi}}\, e^{-\sfrac{x'^2}{2n\varepsilon^2}} \cdot \frac{1}{\varepsilon\sqrt{2\pi}}\, e^{-\sfrac{(x - x')^2}{2\varepsilon^2}} \diff x'\\
 &= \frac{1}{\varepsilon\sqrt{2(n+1)\pi}}\, e^{-\sfrac{x^2}{2(n+1)\varepsilon^2}} \myEqAnnex{gauss_random_walk}
 \end{align}
 
-and since the calculated $p(x,n+1)$ is the same as $\rho(x,n+1)$ in \myEqRef{rho_gauss} the expression is proofed. $\checkmark$
+and since the calculated $\rho(x,n+1)$ is the same as $\rho(x,n)$ in \myEqRef{rho_gauss} the expression is proofed. $\checkmark$
 \subsection{Mean square distance}
 Obviously the expectation value for $x$ after $n$ steps $\langle x_n\rangle = 0$. What can be derived from:
 \begin{align}
-\langle x_n\rangle = \int_{-\infty}^\infty x \cdot \rho(x,t)\; dx = 0
+\langle x_n\rangle = \int_{-\infty}^\infty x \cdot \rho(x,t)\diff x = 0
 \end{align}
 But the \effect{Mean Square Distance} $\langle x_n^2\rangle$ (MSD) fulfills the following expression:
 \begin{align}
-\langle x_n^2\rangle = \int_{-\infty}^\infty x^2 \cdot \rho(x,t)\; dx = 2 D t \myEqAnnex{MSD}
+\langle x_n^2\rangle = \int_{-\infty}^\infty x^2 \cdot \rho(x,t)\diff x = 2 D t \myEqAnnex{MSD}
 \end{align}
 
 \section{Implementation of the langevin simulation}
@@ -310,7 +313,7 @@ $l$ & 3.11126910e-02
 Since for a simple exponential expression the Laplace transformed expression is given by:
 \begin{align}
 F(x) &= A \cdot e^{B\cdot x} \\
-\widetilde{F}(\omega) &= \int_0^\infty A \cdot e^{B\cdot x} \cdot e^{-\omega\cdot x}\, dx \\
+\widetilde{F}(\omega) &= \int_0^\infty A \cdot e^{B\cdot x} \cdot e^{-\omega\cdot x}\diff x \\
 &= \frac{A}{B + \omega}
 \end{align}
 
@@ -333,27 +336,50 @@ The Laplace transformed correlation functions are:
 \Leftrightarrow D &= \frac{\varepsilon^2}{2\delta t}
 \end{align}
 
+\myEqRef{moivre_laplace_theorem}
+\begin{align}
+p(x,n) &= \binom{n}{k} \cdot 2^{-n}\;\;\;\; \mathrm{with}\;\;\; k = \frac{1}{2}\left(n+\frac{x}{\varepsilon}\right)\\
+&= \frac{n!}{k!(n-k)!}\cdot 2^{-n}\\
+\mathrm{with}\;\;\; n! &\cong \sqrt{2\pi n}\;n^ne^{-n}\;\;\;\mathrm{(Stirling's\;formula)}\\
+\Rightarrow \;\;\; p(x,n) &\cong \frac{\sqrt{2\pi n}\;n^ne^{-n}}{\sqrt{2\pi k}\;k^ke^{-k} \sqrt{2\pi(n-k)}\;(n-k)^{n-k}e^{k-n}} \cdot 2^{-n}\\
+&= \left(\frac{\sqrt{2\pi n}}{\sqrt{2\pi k}\;\sqrt{2\pi(n-k)}} \right) \underbrace{\left(\frac{e^{-n}}{e^{-k}\;e^{k-n}}\right)}_{=1} \left( \frac{n^n}{k^k(n-k)^{n-k}}\right)\cdot 2^{-n}\\
+&= \sqrt{\frac{2n}{\pi(n+\sfrac{x}{\varepsilon})(n-\sfrac{x}{\varepsilon})}} \cdot \left(\frac{n}{2} \right)^k \cdot \left(\frac{n}{2} \right)^{n-k} \notag\\
+&\;\;\;\;\cdot \left( \frac{1}{2}\left( n+\sfrac{x}{\varepsilon}\right) \right)^{-\frac{1}{2}(n+\sfrac{x}{\varepsilon})} \cdot \left( \frac{1}{2}\left( n-\sfrac{x}{\varepsilon}\right) \right)^{-\frac{1}{2}(n-\sfrac{x}{\varepsilon})} \\
+&= \sqrt{\frac{2n}{\pi \left(n^2 - \left( \sfrac{x}{\varepsilon} \right)^2 \right)}} \cdot \left( \frac{n}{n+\sfrac{x}{\varepsilon}}\right)^{-\frac{1}{2}(n+\sfrac{x}{\varepsilon})} \cdot \left( \frac{n}{n-\sfrac{x}{\varepsilon}}\right)^{-\frac{1}{2}(n-\sfrac{x}{\varepsilon})} \\
+&= \sqrt{\frac{2n}{\pi \left(n^2 - \left( \sfrac{x}{\varepsilon} \right)^2 \right)}} \cdot \left( 1 + \frac{x}{\varepsilon n}\right)^{-\frac{1}{2}(n+\sfrac{x}{\varepsilon})} \cdot \left( 1 - \frac{x}{\varepsilon n}\right)^{-\frac{1}{2}(n-\sfrac{x}{\varepsilon})} \\
+\mathrm{use} \;\;\; x &= e^{\ln(x)}\\
+\Rightarrow \;\;\; p(x,n) &\cong \sqrt{\frac{2}{\pi n\left(1 - \left( \frac{\sfrac{x}{\varepsilon}}{n} \right)^2 \right)}} \notag\\
+&\;\;\;\;\cdot \exp\!\left(-\frac{n}{2}\left( 1+\frac{\sfrac{x}{\varepsilon}}{n} \right) \, \ln\!\left(1 + \frac{\sfrac{x}{\varepsilon}}{n} \right) -\frac{1}{2}(n-\sfrac{x}{\varepsilon})\, \ln\!\left(1 - \frac{\sfrac{x}{\varepsilon}}{n} \right) \right) \\
+\mathrm{for}\;\;\; n &\rightarrow\infty \; \Rightarrow \; \alpha \rightarrow 0 \;\;\; \alpha := \frac{\sfrac{x}{\varepsilon}}{n}\; \\ 
+&\Rightarrow\;\;  1-\alpha^2 \rightarrow 1 + ... \; \\
+&\mathrm{and}\;\,\ln\!\left(1+\alpha\right) \rightarrow \alpha - \frac{1}{2}\alpha^2 + ... \\
+\Rightarrow \;\;\; p(x,n) &\cong \sqrt{\frac{2}{n\pi}} \cdot \exp\!\left(-\frac{n}{2}\left(\left(1+\alpha\right)\left(\alpha - \frac{1}{2} \alpha^2 \right) +\left(1-\alpha\right)\left(-\alpha - \frac{1}{2} \alpha^2 \right)\right) \right)\\
+&= \sqrt{\frac{2}{n\pi}} \cdot \exp\!\left(-\frac{n}{2}\left(\alpha -\frac{1}{2} \alpha^2 + \alpha^2 - \alpha - \frac{1}{2} \alpha^2 + \alpha^2 + \mathcal{O}(\alpha^3)\right) \right) \\
+&\cong \sqrt{\frac{2}{n\pi}} \cdot \exp\!\left(-\frac{n}{2}\left(\alpha^2\right) \right)\\
+&= \sqrt{\frac{2}{n\pi}} \cdot e^{-\sfrac{x^2}{2\varepsilon^2n}}
+\end{align}
+
 \myEqRef{gauss_random_walk}
 \begin{align}
-p(x,n+1) &= \int_{-\infty}^\infty \frac{1}{\varepsilon\sqrt{2n\pi}}\, e^{-\sfrac{x'^2}{2n\varepsilon^2}} \cdot \frac{1}{\varepsilon\sqrt{2\pi}}\, e^{-\sfrac{(x - x')^2}{2\varepsilon^2}} \, dx'\\
-&= \frac{1}{\varepsilon^2\sqrt{4\pi^2n}} \, \int_{-\infty}^\infty e^{-\frac{x'^2 + x^2n - 2xx'n +x'^2n}{2n\varepsilon^2}}\, dx' \\
-&= \frac{1}{\varepsilon^2\sqrt{4\pi^2n}} \, \int_{-\infty}^\infty e^{-\frac{(n+1)x'^2 - 2xx'n + \sfrac{x^2n^2}{(n+1)} + x^2n - \sfrac{x^2n^2}{(n+1)}}{2n\varepsilon^2}}\, dx' \\
-&= \frac{1}{\varepsilon^2\sqrt{4\pi^2n}} \, \int_{-\infty}^\infty e^{-\frac{(\sqrt{n+1}x - \sfrac{xn}{\sqrt{n+1}}')^2}{2n\varepsilon^2}} \cdot e^{- \frac{x^2 - \sfrac{x^2n}{(n+1)}}{2\varepsilon^2}}\, dx' \\
+p(x,n+1) &= \int_{-\infty}^\infty \frac{1}{\varepsilon\sqrt{2n\pi}}\, e^{-\sfrac{x'^2}{2n\varepsilon^2}} \cdot \frac{1}{\varepsilon\sqrt{2\pi}}\, e^{-\sfrac{(x - x')^2}{2\varepsilon^2}} \diff x'\\
+&= \frac{1}{\varepsilon^2\sqrt{4\pi^2n}} \, \int_{-\infty}^\infty e^{-\frac{x'^2 + x^2n - 2xx'n +x'^2n}{2n\varepsilon^2}}\diff x' \\
+&= \frac{1}{\varepsilon^2\sqrt{4\pi^2n}} \, \int_{-\infty}^\infty e^{-\frac{(n+1)x'^2 - 2xx'n + \sfrac{x^2n^2}{(n+1)} + x^2n - \sfrac{x^2n^2}{(n+1)}}{2n\varepsilon^2}}\diff x' \\
+&= \frac{1}{\varepsilon^2\sqrt{4\pi^2n}} \, \int_{-\infty}^\infty e^{-\frac{(\sqrt{n+1}x - \sfrac{xn}{\sqrt{n+1}}')^2}{2n\varepsilon^2}} \cdot e^{- \frac{x^2 - \sfrac{x^2n}{(n+1)}}{2\varepsilon^2}}\diff x' \\
 \mathrm{let}\;\;\; \alpha &= \frac{\sqrt{n+1}x' - \sfrac{xn}{\sqrt{n+1}}}{\sqrt{2n}\varepsilon}
-\;\;\; \Rightarrow \;\;\; d\alpha = \sqrt{\frac{n+1}{2n\varepsilon^2}}\; dx'\\
-p(x,n+1) &= \frac{1}{\varepsilon^2\sqrt{4\pi^2n}} \sqrt{\frac{2n\varepsilon^2}{n+1}}\;\cdot\, e^{-\frac{(n+1)x^2 - x^2n}{2(n+1)\varepsilon^2}}\, \int_{-\infty}^\infty e^{-\alpha^2}\, d\alpha\\
-&= \frac{1}{\varepsilon\sqrt{2(n+1)\pi}}\;\cdot\, e^{-\frac{x^2}{2(n+1)\varepsilon^2}}
+\;\;\; \Rightarrow \;\;\diff\alpha = \sqrt{\frac{n+1}{2n\varepsilon^2}} \diff x' \notag\\
+p(x,n+1) &= \frac{1}{\varepsilon^2\sqrt{4\pi^2n}} \sqrt{\frac{2n\varepsilon^2}{n+1}}\;\cdot\, e^{-\frac{(n+1)x^2 - x^2n}{2(n+1)\varepsilon^2}}\, \int_{-\infty}^\infty e^{-\alpha^2} \diff\alpha\notag\\
+&= \frac{1}{\varepsilon\sqrt{2(n+1)\pi}}\;\cdot\, e^{-\frac{x^2}{2(n+1)\varepsilon^2}}\notag
 \end{align}
 
 \myEqRef{MSD}
 \begin{align}
-\langle x_n^2\rangle &= \int_{-\infty}^\infty x^2 \cdot \frac{1}{\varepsilon\sqrt{2\pi n}}\; e^{-\sfrac{x^2}{2\varepsilon^2 n}}\; dx\\
-&= \frac{1}{\varepsilon\sqrt{2\pi n}} \; \int_{-\infty}^\infty x^2 \cdot e^{-\sfrac{x^2}{2\varepsilon^2 n}}\; dx \\
-\mathrm{let}\;\;\; \alpha &= \frac{x}{\sqrt{2\varepsilon^2n}} \;\;\; \Rightarrow \;\;\; dx = \sqrt{2\varepsilon^2n}\;d\alpha\\
-\langle x_n^2\rangle &= \frac{\sqrt{2\varepsilon^2n}}{\varepsilon\sqrt{2\pi n}} \; \int_{-\infty}^\infty 2 \varepsilon^2n\alpha^2\; e^{-\alpha^2}\; d\alpha\\
-&= \frac{2\varepsilon^2n}{\sqrt{\pi}} \; \int_{-\infty}^\infty \alpha^2\; e^{-\alpha^2}\; d\alpha\\
-&= \frac{\varepsilon^2n}{\sqrt{\pi}} \; \int_{-\infty}^\infty \alpha \cdot 2\alpha\; e^{-\alpha^2}\; d\alpha\\
-&= \frac{\varepsilon^2n}{\sqrt{\pi}} \; \left(-\alpha e^{-\alpha^2}\;\; \bigg\vert_{-\infty}^\infty \;\;\; - \int_{-\infty}^\infty 1 \cdot \left(-e^{-\alpha^2} \right)\; d\alpha\right) \\
+\langle x_n^2\rangle &= \int_{-\infty}^\infty x^2 \cdot \frac{1}{\varepsilon\sqrt{2\pi n}}\; e^{-\sfrac{x^2}{2\varepsilon^2 n}}\; \diff x\\
+&= \frac{1}{\varepsilon\sqrt{2\pi n}} \; \int_{-\infty}^\infty x^2 \cdot e^{-\sfrac{x^2}{2\varepsilon^2 n}} \diff x \\
+\mathrm{let}\;\;\; \alpha &= \frac{x}{\sqrt{2\varepsilon^2n}} \;\;\; \Rightarrow \;\;\; dx = \sqrt{2\varepsilon^2n}\diff\alpha\\
+\langle x_n^2\rangle &= \frac{\sqrt{2\varepsilon^2n}}{\varepsilon\sqrt{2\pi n}} \; \int_{-\infty}^\infty 2 \varepsilon^2n\alpha^2\; e^{-\alpha^2} \diff\alpha\\
+&= \frac{2\varepsilon^2n}{\sqrt{\pi}} \; \int_{-\infty}^\infty \alpha^2\; e^{-\alpha^2} \diff \alpha\\
+&= \frac{\varepsilon^2n}{\sqrt{\pi}} \; \int_{-\infty}^\infty \alpha \cdot 2\alpha\; e^{-\alpha^2}\; \diff\alpha\\
+&= \frac{\varepsilon^2n}{\sqrt{\pi}} \; \left(\left.-\alpha e^{-\alpha^2}\;\; \right|_{-\infty}^\infty \;\;\; - \int_{-\infty}^\infty 1 \cdot \left(-e^{-\alpha^2} \right) \diff\alpha\right) \\
 &= \frac{\varepsilon^2n}{\sqrt{\pi}} \; \left(0 + \sqrt{\pi} \right)\\
 &= \varepsilon^2 n \\
 &= 2 D \delta t n \\
