--- a/tex/thesis.tex
+++ b/tex/thesis.tex
@@ -9,6 +9,7 @@
 \usepackage{amssymb}
 \usepackage{xfrac}
 \usepackage[hidelinks]{hyperref}
+\usepackage[super]{nth}
 \usetikzlibrary{matrix,calc,3d}
 
 \title{Proton Dynamics in Cavities}
@@ -43,6 +44,21 @@
 
 \begin{document}
 \maketitle
+
+\includegraphics[width=\textwidth]{img/title}
+
+\vfill
+
+\enlargethispage{2cm}
+  \parbox[t]{0.45\textwidth}{%
+   Freie-Universität-Berlin\\
+   Department of Physics\\
+   AG Netz
+  }
+  \parbox[t]{0.55\textwidth}{\raggedleft%
+    \nth{1} reviewer: Prof. Dr. Roland R. Netz
+  }
+
 \thispagestyle{empty}
 \newpage
 \tableofcontents
