--- a/tex/thesis.tex
+++ b/tex/thesis.tex
@@ -12,6 +12,11 @@
 \usepackage[super]{nth}
 \usetikzlibrary{matrix,calc,3d}
 
+\usepackage{csquotes} 
+\usepackage[backend=bibtex8,style=numeric]{biblatex} 
+\addbibresource{thesis.bib}
+
+
 \title{Proton Dynamics in Cavities}
 \author{Dominik Wille}
 
@@ -42,6 +47,8 @@
 
 \newcommand{\myEqAnnex}[1]{\;\;\;\ast \myEqLabel{#1}}
 
+\newcommand{\myCite}[1]{\footnote{\cite{#1} \citeauthor{#1} \citetitle{#1} \citeyear{#1}}}
+
 \begin{document}
 \maketitle
 
@@ -67,7 +74,18 @@
 \setcounter{page}{1}
 
 \section{Introduction}
+Proton- or generally ion dynamics in fluids directly imply fluctuations in the potential and conductivity of objects which are surrounded by the fluid. The major processes which influence the motion which are considered here are \effect{absorption} and \effect{desorption} processes. The more ions are absorbed on a surface the more they influence its potential. The more ions are left in the fluid the higher is its conductivity which dues to ionic currents at all.
 
+In this document the motion of one particle is considered as a brownian motion. 
+
+\newpage
+In this document some properties of the 
+
+For a single surface this means\myCite{netzpaper}:
+\begin{align}
+C_{AA}(t) = &\sum_{i,l=0}^\infty \Bigg\lbrace \int_0^\infty \diff t_e\, Q_A(t_e) \prod_{j=1}^i \left[ \int_0^\infty \diff t_j\, P_A(t_j) \int_0^\infty \diff t_j'\, J_{AA}(t_j')\right]\notag\\ 
+&\delta \left(\sum_{k=1}^i(t_k+t_k') + t_e - t \right) \Bigg\rbrace
+\end{align}
 
 \section{Brownian Dynamics}
 The motion of a particle such as a proton in a fluid is primarily  caused by collisions with other particles. This motion firstly was described by \person{Robert Brown} who observed the motion of minute particles of pollen in water and is widely known as \effect{brownian motion}.
@@ -103,7 +121,7 @@ In the discussed 1--dimensional case $\varepsilon$ is the mean step size and $\b
 P(s) = \frac{1}{\varepsilon \sqrt{2\pi}} e^{-\sfrac{s^2}{2\varepsilon^2}}
 \end{align} 
 
-The position of a particle at time $t + \Delta t$ can easily derived from its position at time $t$.
+The position of a particle at time $t + \Delta t$ can easily derived from its position\myCite{pinknoise} at time $t$.
 
 \begin{align}
 \mathbf{r}(t + \delta t) = \mathbf{r}(t) + \boldsymbol{\zeta}(t, \varepsilon)
@@ -224,7 +242,7 @@ But the \effect{Mean Square Distance} $\langle x_n^2\rangle$ (MSD) fulfills the 
 \langle x_n^2\rangle = \int_{-\infty}^\infty x^2 \cdot \rho(x,t)\diff x = 2 D t \myEqAnnex{MSD}
 \end{align}
 
-\section{Implementation of the langevin simulation}
+\section{2 Plates system}
 The system which is simulated consists of two infinite plates A and B with distance $d$. Between the two plates is some fluid which surrounds the simulated ion. The ion absorbs at the surface of the two plates with the probability $p$ and desorbs with an exponential decaying probability $P(t)$ given by:
 \begin{align}
 P(t) = \frac{1}{\tau}e^{- \sfrac{t}{\tau}}
@@ -338,6 +356,7 @@ The Laplace transformed correlation functions are:
 \widetilde{C}_{AA}(\omega) &= \frac{a}{b + \omega} + \frac{c}{d + \omega} + \frac{f}{g + \omega} + \frac{h}{\omega} \\
 \widetilde{C}_{AB}(\omega) &= \frac{j}{k + \omega} + \frac{l}{\omega}
 \end{align}
+
 \section{Annex}
 \myEqRef{diffusion_PDE}
 \begin{align}
@@ -401,4 +420,7 @@ p(x,n+1) &= \frac{1}{\varepsilon^2\sqrt{4\pi^2n}} \sqrt{\frac{2n\varepsilon^2}{n
 &= 2 D \delta t n \\
 &= 2 D t
 \end{align}
+
+\section{Biblography}
+\printbibliography 
 \end{document}
