--- a/tex/thesis.bib
+++ b/tex/thesis.bib
@@ -8,3 +8,9 @@
   title = "Conductivity Fluctuations in Cylindrical Pores",
   year = 2014
 }
+@article{brownian,
+  title = "Notes on Brownian Motion",
+  chapter = "3",
+  publisher = "Utrecht University",
+  year = 2011
+}
