--- a/tex/thesis.tex
+++ b/tex/thesis.tex
@@ -349,9 +349,9 @@ $l$ & 3.11126910e-02
 
 Since for a simple exponential expression the Laplace transformed expression is given by:
 \begin{align}
-F(x) &= A \cdot e^{B\cdot x} \\
-\widetilde{F}(\omega) &= \int_0^\infty A \cdot e^{B\cdot x} \cdot e^{-\omega\cdot x}\diff x \\
-&= \frac{A}{B + \omega}
+F(t) &= c_i \cdot e^{b_i \cdot t} \\
+\widetilde{F}(\omega) &= \int_0^\infty c_i \cdot e^{b_i\cdot x} \cdot e^{-\omega\cdot t}\diff t \\
+&= \frac{ci}{\omega - b_i}
 \end{align}
 
 The Laplace transformed correlation functions are:
